# md-editor

./: .drone.yml  .gitignore  README.md  index.html  math-mermaid-demo.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-release.yml
ci/: Dockerfile.build
ci/scripts/: build-linux.sh  build-macos.sh  build-windows.sh  common.sh
plugins/cos/: plugin.json  plugin.toml
plugins/oss/: plugin.json  plugin.toml
public/: startup-bootstrap.js
scripts/: test-align.mjs  test-math-standalone.mjs
src/: appInfo.ts  blockBrowserShortcuts.ts  bootstrapSettings.ts  documentHistory.ts  editorAutocomplete.ts  i18n.ts  idiomorph.d.ts  katexCache.ts  main.ts  markdownBlocks.ts  markdownPipeline.ts  markedMath.ts  mermaidLazy.ts  objectStorage.ts  orderedListLayout.ts  plugins.ts  previewInteractions.ts  previewMorph.ts  previewRenderer.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: document_history.rs  file_assoc.rs  lib.rs  plugins.rs  settings.rs
src-tauri/windows/: installer.nsi
src/workers/: previewWorker.ts
