[package]
name = "md-editor"
version = "0.1.1"
description = "A Markdown Editor"
authors = ["anfu"]
edition = "2021"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
url = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

